--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -16,8 +16,8 @@
 	},
 	"dependencies": {
 		"@expo/vector-icons": "^14.0.2",
-		"@prisma/client": "5.19.1",
 		"@react-navigation/native": "^6.0.2",
+		"@ridi/database": "link:../../packages/database",
 		"expo": "~51.0.28",
 		"expo-constants": "~16.0.2",
 		"expo-font": "~12.0.9",
