--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"dev:web": "pnpm -F \"@ridi/web\" dev",
+		"clean": "rm -rf ./node_modules/ && rm -rf ./apps/web/node_modules/ && rm -rf ./apps/mobile/node_modules/ && rm -rf ./packages/database/node_modules/ && rm -rf pnpm-lock.yaml"
 	},
 	"keywords": [],
 	"author": "",
@@ -12,7 +13,6 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
 		"@types/node": "^22.5.4",
-		"prisma": "^5.19.1",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.5.4"
 	}
