switch to postgres

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"dev:web": "pnpm -F \"@ridi/web\" dev",
-		"db:push": "pnpm -F \"@ridi/database\" push",
+		"db:push": "env $(cat ./apps/web/.env | xargs) pnpm -F \"@ridi/database\" push",
+		"dev:db": "docker compose -f docker-compose.local.yml up -d",
 		"clean": "rm -rf ./node_modules/ && rm -rf ./apps/web/node_modules/ && rm -rf ./apps/mobile/node_modules/ && rm -rf ./packages/database/node_modules/ && rm -rf pnpm-lock.yaml"
 	},
 	"keywords": [],
