--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -4,20 +4,16 @@
 	"description": "",
 	"main": "src/index.ts",
 	"scripts": {
-		"generate": "pnpm generate:system && pnpm generate:user",
-		"generate:system": "prisma generate --schema ./prisma/system-schema.prisma",
-		"generate:user": "prisma generate --schema ./prisma/user-schema.prisma",
-		"push": "pnpm push:system && pnpm push:user",
-		"push:system": "prisma db push --accept-data-loss --schema ./prisma/system-schema.prisma",
-		"push:user": "prisma db push --accept-data-loss --schema ./prisma/user-schema.prisma"
+		"generate": "prisma generate --schema ./prisma/system-schema.prisma",
+		"push": "prisma db push --accept-data-loss --schema ./prisma/system-schema.prisma"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@libsql/client": "^0.10.0",
-		"@prisma/adapter-libsql": "^5.19.1",
-		"@prisma/client": "^5.19.1"
+		"@prisma/adapter-pg": "^5.19.1",
+		"@prisma/client": "^5.19.1",
+		"pg": "^8.12.0"
 	},
 	"devDependencies": {
 		"prisma": "^5.19.1"
