--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,9 +23,14 @@
 		"@solidjs/meta": "^0.29.4",
 		"@solidjs/router": "^0.14.1",
 		"@solidjs/start": "^1.0.6",
+		"@trpc/client": "11.0.0-rc.502",
+		"@trpc/server": "11.0.0-rc.502",
+		"@typeschema/valibot": "^0.14.0",
+		"client-only": "^0.0.1",
+		"server-only": "^0.0.1",
 		"solid-js": "^1.8.18",
-		"vinxi": "^0.4.1",
-		"zod": "^3.23.8"
+		"valibot": "^0.41.0",
+		"vinxi": "^0.4.1"
 	},
 	"engines": {
 		"node": ">=18"
