--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
 		"@types/node": "^20.12.7",
 		"esbuild": "^0.20.2",
 		"next-auth": "^4.24.7",
+		"pino-pretty": "^11.2.2",
 		"postcss": "^8.4.38",
 		"typescript": "^5.4.5",
 		"vite": "^5.2.8",
@@ -19,6 +20,7 @@
 		"@auth/core": "^0.29.0",
 		"@auth/prisma-adapter": "^2.4.2",
 		"@babel/core": "7.24.4",
+		"@bugsnag/cuid": "^3.1.1",
 		"@ridi/database": "workspace:^",
 		"@ridi/server-client-check": "workspace:^",
 		"@solid-mediakit/auth": "^2.0.11",
@@ -28,6 +30,7 @@
 		"@trpc/client": "11.0.0-rc.502",
 		"@trpc/server": "11.0.0-rc.502",
 		"@typeschema/valibot": "^0.14.0",
+		"pino": "^9.4.0",
 		"solid-js": "^1.8.18",
 		"valibot": "^0.41.0",
 		"vinxi": "^0.4.1"
