--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"dev":"./dev-all.sh",
 		"dev:web": "pnpm -F \"@ridi/web\" dev",
 		"db:push": "env $(cat ./apps/web/.env | xargs) pnpm -F \"@ridi/database\" push",
 		"dev:db": "docker compose -f docker-compose.local.yml up -d",
+		"dev:mobile":"pnpm -F \"@ridi/mobile\" dev",
+		"dev:tunnel":"ngrok http http://localhost:3000",
 		"clean": "rm -rf ./node_modules/ && rm -rf ./apps/web/node_modules/ && rm -rf ./apps/mobile/node_modules/ && rm -rf ./packages/database/node_modules/ && rm -rf pnpm-lock.yaml"
 	},
 	"keywords": [],
