--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -21,10 +21,7 @@
     "baseUrl": ".",
     "paths": {
       "~/*": [
-        "app/*"
-      ],
-      "@/*": [
-        "app/*"
+        "src/*"
       ]
     }
   },
