--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,16 +1,18 @@
 {
   "name": "@ridi/mobile",
-  "main": "src/app.ts",
+  "main": "src/index.ts",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@nativescript-community/solid-js": "^0.0.7",
+    "@nativescript-community/ui-collectionview": "^5.3.40",
     "@nativescript/core": "~8.8.0",
     "@trpc/client": "11.0.0-rc.502",
     "@trpc/server": "11.0.0-rc.502",
     "abortcontroller-polyfill": "^1.7.5",
     "dominative": "^0.1.3",
     "solid-js": "^1.8.18",
+    "solid-navigation": "1.0.0-alpha.16",
     "undom-ng": "^1.1.2",
     "valibot": "^0.41.0"
   },
