--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,42 +1,49 @@
 {
-  "name": "@ridi/mobile",
-  "main": "src/index.ts",
-  "version": "1.0.0",
-  "private": true,
-  "dependencies": {
-    "@nativescript-community/solid-js": "^0.0.7",
-    "@nativescript-community/ui-collectionview": "^5.3.40",
-    "@nativescript/core": "~8.8.0",
-    "@trpc/client": "11.0.0-rc.502",
-    "@trpc/server": "11.0.0-rc.502",
-    "abortcontroller-polyfill": "^1.7.5",
-    "dominative": "^0.1.3",
-    "solid-js": "^1.8.18",
-    "solid-navigation": "1.0.0-alpha.16",
-    "undom-ng": "^1.1.2",
-    "valibot": "^0.41.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.24.4",
-    "@babel/preset-env": "^7.24.4",
-    "@babel/preset-typescript": "^7.24.1",
-    "@nativescript-dom/core-types": "^1.0.31",
-    "@nativescript-dom/solidjs-types": "^1.0.25",
-    "@nativescript/preview-cli": "1.0.13",
-    "@nativescript/tailwind": "~2.1.0",
-    "@nativescript/types": "^8.8.0",
-    "@nativescript/webpack": "~5.0.0",
-    "babel": "^6.23.0",
-    "babel-loader": "^9.1.3",
-    "babel-preset-solid": "^1.8.8",
-    "solid-refresh": "^0.7.5",
-    "tailwindcss": "~3.4.3"
-  },
-  "scripts": {
-    "dev:android": "ns run android --no-hmr",
-    "dev:ios": "ns run ios --no-hmr",
-    "dev": "ns preview --no-hmr",
-    "clean": "ns clean",
-    "list:devices": "ns devices"
-  }
+	"name": "@ridi/mobile",
+	"main": "expo-router/entry",
+	"version": "1.0.0",
+	"scripts": {
+		"start": "expo start",
+		"reset-project": "node ./scripts/reset-project.js",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web",
+		"test": "jest --watchAll",
+		"lint": "expo lint"
+	},
+	"jest": {
+		"preset": "jest-expo"
+	},
+	"dependencies": {
+		"@expo/vector-icons": "^14.0.2",
+		"@react-navigation/native": "^6.0.2",
+		"expo": "~51.0.28",
+		"expo-constants": "~16.0.2",
+		"expo-font": "~12.0.9",
+		"expo-linking": "~6.3.1",
+		"expo-router": "~3.5.23",
+		"expo-splash-screen": "~0.27.5",
+		"expo-status-bar": "~1.12.1",
+		"expo-system-ui": "~3.0.7",
+		"expo-web-browser": "~13.0.3",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-native": "0.74.5",
+		"react-native-gesture-handler": "~2.16.1",
+		"react-native-reanimated": "~3.10.1",
+		"react-native-safe-area-context": "4.10.5",
+		"react-native-screens": "3.31.1",
+		"react-native-web": "~0.19.10"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.20.0",
+		"@types/jest": "^29.5.12",
+		"@types/react": "~18.2.45",
+		"@types/react-test-renderer": "^18.0.7",
+		"jest": "^29.2.1",
+		"jest-expo": "~51.0.3",
+		"react-test-renderer": "18.2.0",
+		"typescript": "~5.3.3"
+	},
+	"private": true
 }
