--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@ridi/mobile",
-	"main": "expo-router/entry",
+	"name": "@ridi/expo-app",
+	"main": "index.ts",
 	"version": "1.0.0",
 	"scripts": {
 		"start": "expo start",
