--- a/apps/expo-app/app.json
+++ b/apps/expo-app/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "mobile_expo",
-    "slug": "mobile_expo",
+    "name": "expo-app",
+    "slug": "expo-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
