--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -16,7 +16,14 @@
 	},
 	"dependencies": {
 		"@expo/vector-icons": "^14.0.2",
+		"@react-native-async-storage/async-storage": "1.23.1",
 		"@react-navigation/native": "^6.0.2",
+		"@rn-primitives/label": "^1.0.4",
+		"@rn-primitives/slot": "^1.0.4",
+		"@rn-primitives/types": "^1.0.4",
+		"@supabase/supabase-js": "^2.45.4",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
 		"expo": "~51.0.28",
 		"expo-constants": "~16.0.2",
 		"expo-font": "~12.0.9",
@@ -26,6 +33,8 @@
 		"expo-status-bar": "~1.12.1",
 		"expo-system-ui": "~3.0.7",
 		"expo-web-browser": "~13.0.3",
+		"lucide-react-native": "^0.441.0",
+		"nativewind": "^4.0.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-native": "0.74.5",
@@ -33,7 +42,12 @@
 		"react-native-reanimated": "~3.10.1",
 		"react-native-safe-area-context": "4.10.5",
 		"react-native-screens": "3.31.1",
-		"react-native-web": "~0.19.10"
+		"react-native-svg": "^15.7.1",
+		"react-native-url-polyfill": "^2.0.0",
+		"react-native-web": "~0.19.10",
+		"tailwind-merge": "^2.5.2",
+		"tailwindcss": "^3.4.12",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
