--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -54,6 +54,7 @@
 		"@types/jest": "^29.5.12",
 		"@types/react": "~18.2.45",
 		"@types/react-test-renderer": "^18.0.7",
+		"babel-plugin-react-compiler": "0.0.0-experimental-6067d4e-20240919",
 		"jest": "^29.2.1",
 		"jest-expo": "~51.0.3",
 		"react-test-renderer": "18.2.0",
