--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -3,7 +3,7 @@
 	"main": "index.ts",
 	"version": "1.0.0",
 	"scripts": {
-		"start": "expo start",
+		"start": "expo start --clear",
 		"reset-project": "node ./scripts/reset-project.js",
 		"android": "expo start --android",
 		"ios": "expo start --ios",
