--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -9,7 +9,8 @@
 		"ios": "expo start --ios",
 		"web": "expo start --web",
 		"test": "jest --watchAll",
-		"lint": "expo lint"
+		"lint": "expo lint",
+		"build:android": "eas build --profile development --platform android"
 	},
 	"jest": {
 		"preset": "jest-expo"
@@ -25,7 +26,9 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"expo": "~51.0.28",
+		"expo-auth-session": "^5.5.2",
 		"expo-constants": "~16.0.2",
+		"expo-dev-client": "~4.0.26",
 		"expo-font": "~12.0.9",
 		"expo-linking": "~6.3.1",
 		"expo-router": "~3.5.23",
