--- a/apps/axum-app/Dockerfile
+++ b/apps/axum-app/Dockerfile
@@ -6,7 +6,7 @@ COPY . .
 
 RUN cargo install --path .
 
-FROM debian:alpine
+FROM debian:latest
 
 # RUN apt-get update && apt-get install -y extra-runtime-dependencies && rm -rf /var/lib/apt/lists/*
 COPY --from=builder /usr/local/cargo/bin/ridi-router /usr/local/bin/ridi-router
