--- a/apps/axum-app/Dockerfile
+++ b/apps/axum-app/Dockerfile
@@ -1,7 +1,7 @@
 
 FROM rust:latest as builder
 
-WORKDIR /usr/src/ridi-router
+WORKDIR /usr/src/axum-app
 COPY . .
 
 RUN cargo install --path .
@@ -9,6 +9,6 @@ RUN cargo install --path .
 FROM debian:latest
 
 # RUN apt-get update && apt-get install -y extra-runtime-dependencies && rm -rf /var/lib/apt/lists/*
-COPY --from=builder /usr/local/cargo/bin/ridi-router /usr/local/bin/ridi-router
+COPY --from=builder /usr/local/cargo/bin/axum-app /usr/local/bin/axum-app
 
-CMD ["ridi-router"]
+CMD ["axum-app"]
