--- a/apps/axum-app/Dockerfile
+++ b/apps/axum-app/Dockerfile
@@ -8,7 +8,7 @@ RUN cargo install --path .
 
 FROM debian:latest
 
-# RUN apt-get update && apt-get install -y extra-runtime-dependencies && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 COPY --from=builder /usr/local/cargo/bin/axum-app /usr/local/bin/axum-app
 
 CMD ["axum-app"]
