--- a/apps/deno-app/Dockerfile
+++ b/apps/deno-app/Dockerfile
@@ -7,4 +7,4 @@ USER deno
 COPY . .
 RUN deno install --lock deno.lock --frozen=true --entrypoint main.ts
 
-CMD ["run", "--allow-env", "main.ts"]
+CMD ["run", "--allow-env", "--allow-net", "main.ts"]
