--- a/apps/deno-app/Dockerfile
+++ b/apps/deno-app/Dockerfile
@@ -2,6 +2,8 @@ FROM denoland/deno:2.0.0
 
 WORKDIR /app
 
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
 USER deno
 
 COPY . .
