--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -24,6 +24,7 @@
 		"@rn-primitives/slot": "^1.0.4",
 		"@rn-primitives/types": "^1.0.4",
 		"@supabase/supabase-js": "^2.45.4",
+		"@trpc/client": "^10.45.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"expo": "~51.0.28",
