trpc for functions

--- a/mprocs.yaml
+++ b/mprocs.yaml
@@ -1,10 +1,12 @@
 procs:
-  ngrok:
-    shell: "ngrok http http://localhost:2727"
+  # ngrok:
+  #   shell: "ngrok http http://localhost:2727"
   supabase_status:
     shell: "supabase status"
   supabase_functions:
-    shell: "deno --allow-net --allow-read --allow-write scripts/router-url-env.ts && supabase functions serve"
+    shell: "supabase functions serve"
+  # supabase_functions:
+  #   shell: "deno --allow-net --allow-read --allow-write scripts/router-url-env.ts && supabase functions serve"
   astro:
     shell: "pnpm start"
     cwd: "apps/astro-app"
