--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -25,6 +25,7 @@
 		"@rn-primitives/types": "^1.0.4",
 		"@supabase/supabase-js": "^2.45.4",
 		"@trpc/client": "^10.45.2",
+		"@trpc/server": "^10.45.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"expo": "~51.0.28",
@@ -52,7 +53,8 @@
 		"react-native-web": "~0.19.10",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss": "^3.4.12",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"valibot": "^0.42.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
