--- a/supabase/functions/trpc/deno.jsonc
+++ b/supabase/functions/trpc/deno.jsonc
@@ -2,7 +2,9 @@
 	"name": "@ridi/function-trpc",
 	"exports": "index.ts",
 	"imports": {
+		"@supabase/supabase-js": "jsr:@supabase/supabase-js",
 		"@trpc/server": "npm:@trpc/server",
+		"@trpc/server/adapters/fetch": "npm:@trpc/server/adapters/fetch",
 		"valibot": "jsr:@valibot/valibot"
 	}
 }
