--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@legendapp/state": "3.0.0-beta.8",
+    "@maplibre/maplibre-react-native": "10.0.0-alpha.22",
     "@react-navigation/native": "^6.0.2",
     "@rn-primitives/label": "^1.0.4",
     "@rn-primitives/slot": "^1.0.4",
@@ -28,10 +29,12 @@
     "@trpc/client": "11.0.0-rc.576",
     "@trpc/react-query": "11.0.0-rc.576",
     "@trpc/server": "11.0.0-rc.576",
+    "@vis.gl/react-maplibre": "1.0.0-alpha.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "expo": "~51.0.28",
     "expo-auth-session": "^5.5.2",
+    "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.26",
     "expo-font": "~12.0.9",
@@ -42,6 +45,7 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "lucide-react-native": "^0.441.0",
+    "maplibre-gl": "^4.7.1",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
