--- a/apps/expo-app/app.json
+++ b/apps/expo-app/app.json
@@ -33,10 +33,10 @@
 				"expo-build-properties",
 				{
 					"ios": {
-						"newArchEnabled": true
+						"newArchEnabled": false
 					},
 					"android": {
-						"newArchEnabled": true
+						"newArchEnabled": false
 					}
 				}
 			],
