--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -30,6 +30,7 @@
 		"@trpc/react-query": "11.0.0-rc.576",
 		"@trpc/server": "11.0.0-rc.576",
 		"@vis.gl/react-maplibre": "1.0.0-alpha.4",
+		"babel-plugin-react-compiler": "19.0.0-beta-8a03594-20241020",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"expo": "~51.0.38",
@@ -47,8 +48,8 @@
 		"lucide-react-native": "^0.441.0",
 		"maplibre-gl": "^4.7.1",
 		"nativewind": "^4.0.1",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
+		"react": "19.0.0-beta-26f2496093-20240514",
+		"react-dom": "19.0.0-beta-26f2496093-20240514",
 		"react-native": "0.75.4",
 		"react-native-gesture-handler": "~2.18.1",
 		"react-native-mmkv": "^2.12.2",
@@ -69,7 +70,6 @@
 		"@types/jest": "^29.5.12",
 		"@types/react": "~18.2.45",
 		"@types/react-test-renderer": "^18.0.7",
-		"babel-plugin-react-compiler": "0.0.0-experimental-6067d4e-20240919",
 		"jest": "^29.2.1",
 		"jest-expo": "~51.0.3",
 		"react-test-renderer": "18.2.0",
