--- a/apps/expo-app/app.json
+++ b/apps/expo-app/app.json
@@ -30,6 +30,13 @@
 		},
 		"plugins": [
 			[
+				"expo-location",
+				{
+					"locationWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location.",
+					"isAndroidForegroundServiceEnabled": true
+				}
+			],
+			[
 				"expo-build-properties",
 				{
 					"ios": {
