--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -18,9 +18,11 @@
 	},
 	"dependencies": {
 		"@expo/vector-icons": "^14.0.4",
+		"@legendapp/motion": "^2.4.0",
 		"@legendapp/state": "3.0.0-beta.8",
 		"@maplibre/maplibre-react-native": "10.0.0-alpha.22",
 		"@react-navigation/native": "^6.0.2",
+		"@rn-primitives/alert-dialog": "^1.1.0",
 		"@rn-primitives/label": "^1.0.4",
 		"@rn-primitives/slot": "^1.0.4",
 		"@rn-primitives/types": "^1.0.4",
@@ -40,6 +42,7 @@
 		"expo-dev-client": "~4.0.28",
 		"expo-font": "~12.0.9",
 		"expo-linking": "~6.3.1",
+		"expo-location": "~17.0.1",
 		"expo-router": "~3.5.23",
 		"expo-splash-screen": "~0.27.6",
 		"expo-status-bar": "~1.12.1",
@@ -48,8 +51,8 @@
 		"lucide-react-native": "^0.441.0",
 		"maplibre-gl": "^4.7.1",
 		"nativewind": "^4.0.1",
-		"react": "19.0.0-beta-26f2496093-20240514",
-		"react-dom": "19.0.0-beta-26f2496093-20240514",
+		"react": "18.3.1",
+		"react-dom": "18.3.1",
 		"react-native": "0.75.4",
 		"react-native-gesture-handler": "~2.18.1",
 		"react-native-mmkv": "^2.12.2",
