--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -11,7 +11,9 @@
 		"test": "jest --watchAll",
 		"lint": "expo lint",
 		"build:android": "eas build --profile development --platform android",
-		"build:web": "expo export -p web"
+		"build:web": "expo export -p web",
+		"tsc": "tsc --watch",
+		"type-check": "node ./scripts/type-check.mjs"
 	},
 	"jest": {
 		"preset": "jest-expo"
@@ -77,7 +79,7 @@
 		"jest": "^29.2.1",
 		"jest-expo": "~51.0.3",
 		"react-test-renderer": "18.2.0",
-		"typescript": "~5.3.3"
+		"typescript": "~5.6.3"
 	},
 	"private": true,
 	"expo": {
