--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"clean": "rm -rf ./node_modules/ && rm -rf ./apps/web/node_modules/ && rm -rf ./apps/mobile/node_modules/ && rm -rf ./packages/database/node_modules/ && rm -rf pnpm-lock.yaml",
-		"db": "supabase db reset && supabase gen types --local > ./supabase/functions/trpc/types.ts"
+		"db": "supabase db reset && supabase gen types --local > ./supabase/functions/trpc/types.ts && pnpm db:sqlc",
+		"db:sqlc": "cd supabase/ && sqlc generate && cd .."
 	},
 	"keywords": [],
 	"author": "",
