stores and stuff

--- a/apps/expo-app/app.json
+++ b/apps/expo-app/app.json
@@ -48,7 +48,8 @@
 				}
 			],
 			"expo-router",
-			"@maplibre/maplibre-react-native"
+			"@maplibre/maplibre-react-native",
+			"expo-font"
 		],
 		"experiments": {
 			"typedRoutes": true
