--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -21,8 +21,8 @@
 	"dependencies": {
 		"@expo/vector-icons": "^14.0.4",
 		"@legendapp/motion": "^2.4.0",
-		"@legendapp/state": "3.0.0-beta.8",
 		"@maplibre/maplibre-react-native": "10.0.0-alpha.22",
+		"@nanostores/react": "^0.8.0",
 		"@react-navigation/native": "^6.0.2",
 		"@rn-primitives/alert-dialog": "^1.1.0",
 		"@rn-primitives/label": "^1.0.4",
@@ -30,6 +30,7 @@
 		"@rn-primitives/slot": "^1.0.4",
 		"@rn-primitives/types": "^1.0.4",
 		"@supabase/supabase-js": "^2.45.4",
+		"@tanstack/react-query": "^5.59.19",
 		"@trpc/client": "11.0.0-rc.576",
 		"@trpc/server": "11.0.0-rc.576",
 		"@vis.gl/react-maplibre": "1.0.0-alpha.4",
@@ -44,6 +45,7 @@
 		"expo-font": "13.0.0-canary-20241021-c4b5a93",
 		"expo-linking": "7.0.0-canary-20241021-c4b5a93",
 		"expo-location": "18.0.0-canary-20241021-c4b5a93",
+		"expo-network": "7.0.0-canary-20241021-c4b5a93",
 		"expo-router": "4.0.0-canary-20241021-c4b5a93",
 		"expo-splash-screen": "1.0.0-canary-20241021-c4b5a93",
 		"expo-status-bar": "1.12.2-canary-20241021-c4b5a93",
@@ -51,6 +53,7 @@
 		"expo-web-browser": "14.0.0-canary-20241021-c4b5a93",
 		"lucide-react-native": "^0.441.0",
 		"maplibre-gl": "^4.7.1",
+		"nanostores": "^0.11.3",
 		"nativewind": "^4.0.1",
 		"react": "19.0.0-rc-4d577fd2-20241104",
 		"react-dom": "19.0.0-rc-4d577fd2-20241104",
