--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -37,33 +37,32 @@
 		"babel-plugin-react-compiler": "19.0.0-beta-8a03594-20241020",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
-		"expo": "52.0.0-canary-20241021-c4b5a93",
-		"expo-auth-session": "5.5.3-canary-20241021-c4b5a93",
-		"expo-build-properties": "1.0.0-canary-20241021-c4b5a93",
-		"expo-constants": "17.0.0-canary-20241021-c4b5a93",
-		"expo-dev-client": "5.0.0-canary-20241021-c4b5a93",
-		"expo-font": "13.0.0-canary-20241021-c4b5a93",
-		"expo-linking": "7.0.0-canary-20241021-c4b5a93",
-		"expo-location": "18.0.0-canary-20241021-c4b5a93",
-		"expo-network": "7.0.0-canary-20241021-c4b5a93",
-		"expo-router": "4.0.0-canary-20241021-c4b5a93",
-		"expo-splash-screen": "1.0.0-canary-20241021-c4b5a93",
-		"expo-status-bar": "1.12.2-canary-20241021-c4b5a93",
-		"expo-system-ui": "4.0.0-canary-20241021-c4b5a93",
-		"expo-web-browser": "14.0.0-canary-20241021-c4b5a93",
+		"expo": "~51.0.38",
+		"expo-auth-session": "^5.5.2",
+		"expo-build-properties": "~0.12.5",
+		"expo-constants": "~16.0.2",
+		"expo-dev-client": "~4.0.28",
+		"expo-font": "~12.0.9",
+		"expo-linking": "~6.3.1",
+		"expo-location": "~17.0.1",
+		"expo-router": "~3.5.23",
+		"expo-splash-screen": "~0.27.6",
+		"expo-status-bar": "~1.12.1",
+		"expo-system-ui": "~3.0.7",
+		"expo-web-browser": "~13.0.3",
 		"lucide-react-native": "^0.441.0",
 		"maplibre-gl": "^4.7.1",
 		"nanostores": "^0.11.3",
 		"nativewind": "^4.0.1",
-		"react": "19.0.0-rc-4d577fd2-20241104",
-		"react-dom": "19.0.0-rc-4d577fd2-20241104",
-		"react-native": "0.76.0-rc.6",
-		"react-native-gesture-handler": "~2.20.2",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-native": "0.74.5",
+		"react-native-gesture-handler": "~2.16.2",
 		"react-native-mmkv": "^2.12.2",
-		"react-native-reanimated": "~3.15.5",
-		"react-native-safe-area-context": "4.11.0",
-		"react-native-screens": "4.0.0-beta.12",
-		"react-native-svg": "15.8.0-rc.1",
+		"react-native-reanimated": "~3.10.1",
+		"react-native-safe-area-context": "4.10.5",
+		"react-native-screens": "3.31.1",
+		"react-native-svg": "15.2.0",
 		"react-native-url-polyfill": "^2.0.0",
 		"react-native-web": "~0.19.13",
 		"remeda": "^2.16.0",
@@ -77,17 +76,12 @@
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
 		"@types/jest": "^29.5.12",
-		"@types/react": "npm:types-react@rc",
-		"@types/react-dom": "npm:types-react-dom@rc",
+		"@types/react": "~18.2.45",
 		"@types/react-test-renderer": "^18.0.7",
 		"jest": "^29.2.1",
-		"jest-expo": "52.0.0-canary-20241021-c4b5a93",
+		"jest-expo": "51.0.4",
 		"react-test-renderer": "18.2.0",
-		"typescript": "~5.6.3"
-	},
-	"overrides": {
-		"@types/react": "npm:types-react@rc",
-		"@types/react-dom": "npm:types-react-dom@rc"
+		"typescript": "~5.3.3"
 	},
 	"private": true,
 	"expo": {
