--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -39,16 +39,19 @@
 		"clsx": "^2.1.1",
 		"expo": "~51.0.38",
 		"expo-auth-session": "^5.5.2",
+		"expo-background-fetch": "~12.0.1",
 		"expo-build-properties": "~0.12.5",
 		"expo-constants": "~16.0.2",
 		"expo-dev-client": "~4.0.28",
 		"expo-font": "~12.0.9",
 		"expo-linking": "~6.3.1",
 		"expo-location": "~17.0.1",
+		"expo-network": "~6.0.1",
 		"expo-router": "~3.5.23",
 		"expo-splash-screen": "~0.27.6",
 		"expo-status-bar": "~1.12.1",
 		"expo-system-ui": "~3.0.7",
+		"expo-task-manager": "~11.8.2",
 		"expo-web-browser": "~13.0.3",
 		"lucide-react-native": "^0.441.0",
 		"maplibre-gl": "^4.7.1",
