--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -53,6 +53,7 @@
 		"expo-system-ui": "~3.0.7",
 		"expo-task-manager": "~11.8.2",
 		"expo-web-browser": "~13.0.3",
+		"geojson": "^0.5.0",
 		"lucide-react-native": "^0.441.0",
 		"maplibre-gl": "^4.7.1",
 		"nanostores": "^0.11.3",
