--- a/apps/deno-app/docker-compose.yaml
+++ b/apps/deno-app/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: "3"
 name: ridi-router
 services:
   ridi-router-handler:
@@ -9,6 +8,8 @@ services:
         - RIDI_ROUTER_VERSION=${RIDI_ROUTER_VERSION}
     environment:
       - RIDI_ROUTER_REGION=${RIDI_ROUTER_REGION}
+      - SUPABASE_URL=${SUPABASE_URL}
+      - SUPABASE_SECRET_KEY=${SUPABASE_SECRET_KEY}
     volumes:
       - osm-data:/osm-data
     depends_on:
