--- a/apps/deno-app/docker-compose.yaml
+++ b/apps/deno-app/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
       dockerfile: Dockerfile
       args:
         - RIDI_ROUTER_VERSION=${RIDI_ROUTER_VERSION}
+    restart: on-failure
     environment:
       - RIDI_ROUTER_REGION=${RIDI_ROUTER_REGION}
       - SUPABASE_URL=${SUPABASE_URL}
@@ -15,6 +16,12 @@ services:
     depends_on:
       osm-data-handler:
         condition: service_healthy
+    healthcheck:
+      test: curl --fail http://localhost:2727 || exit 1
+      interval: 60s
+      timeout: 10s
+      retries: 5
+      start_period: 5s
 
   osm-data-handler:
     build:
@@ -25,7 +32,7 @@ services:
     volumes:
       - osm-data:/osm-data
     healthcheck:
-      test: ["CMD", "/bin/sh", "./healthcheck.sh"]
+      test: /bin/sh ./healthcheck.sh
       interval: 30s
       timeout: 10s
       retries: 60
