feat: map data processing wip

--- a/apps/ridi-router/.env.example
+++ b/apps/ridi-router/.env.example
@@ -2,3 +2,4 @@ SUPABASE_URL=xxx
 SUPABASE_SECRET_KEY=xxx
 REGION_LIST="../region-list.json"
 RIDI_ROUTER_VERSION=v0.4.0
+RIDI_DATA_DIR="../.ridi-data"
