--- a/apps/ridi-router/Dockerfile
+++ b/apps/ridi-router/Dockerfile
@@ -3,16 +3,18 @@ FROM denoland/deno:2.0.0
 WORKDIR /app
 
 # Install required packages and clean up
-RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y curl coreutils && rm -rf /var/lib/apt/lists/*
 
 # Build arguments for ridi-router
 ARG RIDI_ROUTER_VERSION=""
+ENV RIDI_ROUTER_VERSION=${RIDI_ROUTER_VERSION}
 
 # Create a startup script
-COPY ./startup.sh .
+COPY ../startup.sh .
 RUN chmod +x startup.sh
 
-COPY ./region-list.json .
+COPY ../region-list.json .
+COPY ../lib ../lib
 
 COPY . .
 RUN deno install --lock deno.lock --frozen=true --entrypoint main.ts
