--- a/apps/ridi-router/deploy-handler/deno.json
+++ b/apps/ridi-router/deploy-handler/deno.json
@@ -2,7 +2,5 @@
 	"tasks": {
 		"dev": "deno run --env-file=../.env --watch main.ts"
 	},
-	"imports": {
-		"@std/assert": "jsr:@std/assert@1"
-	}
+	"imports": {}
 }
