chore: wip more

--- a/apps/ridi-router/.env.example
+++ b/apps/ridi-router/.env.example
@@ -3,3 +3,4 @@ SUPABASE_SECRET_KEY=xxx
 REGION_LIST="../region-list.json"
 RIDI_ROUTER_VERSION=v0.4.0
 RIDI_DATA_DIR="../.ridi-data"
+RIDI_ROUTER_BIN="../.ridi-data/ridi-router"
