--- a/apps/ridi-router/deploy-handler/deno.json
+++ b/apps/ridi-router/deploy-handler/deno.json
@@ -1,6 +1,6 @@
 {
 	"tasks": {
-		"dev": "deno run --env-file=../.env --watch main.ts"
+		"dev": "deno run -A --unstable-ffi --env-file=../.env --watch main.ts"
 	},
 	"imports": {}
 }
