--- a/apps/ridi-router/.env.example
+++ b/apps/ridi-router/.env.example
@@ -1,6 +1,6 @@
 SUPABASE_URL=xxx
 SUPABASE_SECRET_KEY=xxx
-REGION_LIST="../region-list.json"
+REGION_LIST="../region-list-local.json"
 RIDI_ROUTER_VERSION=v0.4.0
 RIDI_DATA_DIR="../.ridi-data"
 RIDI_ROUTER_BIN="../.ridi-data/ridi-router"
