feat: deploy handler wip

--- a/apps/ridi-router/.env.example
+++ b/apps/ridi-router/.env.example
@@ -4,3 +4,7 @@ REGION_LIST="../region-list-local.json"
 RIDI_ROUTER_VERSION=v0.4.0
 RIDI_DATA_DIR="../.ridi-data"
 RIDI_ROUTER_BIN="../.ridi-data/ridi-router"
+COOLIFY_API_URL=http://localhost:8080/api/v1
+COOLIFY_TOKEN=ndsdl
+COOLIFY_DEPLOYMENT_ID_ROUTER_HANDLER=lslfd
+COOLIFY_DEPLOYMENT_ID_MAP_DATA_HANDLER=dlkslkf
