--- a/apps/ridi-router/deploy-handler/deno.json
+++ b/apps/ridi-router/deploy-handler/deno.json
@@ -2,5 +2,7 @@
 	"tasks": {
 		"dev": "deno run -A --unstable-ffi --env-file=../.env --watch main.ts"
 	},
-	"imports": {}
+	"imports": {
+		"valibot": "jsr:@valibot/valibot@0.42.1"
+	}
 }
