--- a/apps/ridi-router/deploy-handler/docker-compose.yaml
+++ b/apps/ridi-router/deploy-handler/docker-compose.yaml
@@ -7,3 +7,8 @@ services:
     build:
       context: .
       dockerfile: ../Dockerfile
+    environment:
+      - COOLIFY_API_URL:${COOLIFY_API_URL}
+      - COOLIFY_TOKEN:${COOLIFY_TOKEN}
+      - COOLIFY_DEPLOYMENT_ID_ROUTER_HANDLER:${COOLIFY_DEPLOYMENT_ID_ROUTER_HANDLER}
+      - COOLIFY_DEPLOYMENT_ID_MAP_DATA_HANDLER:${COOLIFY_DEPLOYMENT_ID_MAP_DATA_HANDLER}
