--- a/apps/ridi-router/map-data-handler/docker-compose.yaml
+++ b/apps/ridi-router/map-data-handler/docker-compose.yaml
@@ -4,6 +4,4 @@ services:
     extends:
       file: ../deno-base-docker-compose.yaml
       service: deno-service
-    build:
-      context: .
-      dockerfile: ../Dockerfile
+    command: deno run -A --unstable-ffi ./map-data-handler/main.ts
