--- a/apps/ridi-router/router-handler/docker-compose.yaml
+++ b/apps/ridi-router/router-handler/docker-compose.yaml
@@ -4,9 +4,7 @@ services:
     extends:
       file: ../deno-base-docker-compose.yaml
       service: deno-service
-    build:
-      context: .
-      dockerfile: ../Dockerfile
+    command: deno run -A --unstable-ffi ./router-handler/main.ts
     environment:
       - SUPABASE_URL=${SUPABASE_URL}
       - SUPABASE_SECRET_KEY=${SUPABASE_SECRET_KEY}
