--- a/apps/ridi-router/docker-compose-deploy-handler.yaml
+++ b/apps/ridi-router/docker-compose-deploy-handler.yaml
@@ -2,7 +2,7 @@ name: deploy-handler
 services:
   deploy-handler:
     extends:
-      file: ../deno-base-docker-compose.yaml
+      file: ./docker-compose-base.yaml
       service: deno-service
     command: deno run -A --unstable-ffi ./deploy-handler/main.ts
     environment:
