--- a/apps/ridi-router/docker-compose-router-handler.yaml
+++ b/apps/ridi-router/docker-compose-router-handler.yaml
@@ -2,7 +2,7 @@ name: router-handler
 services:
   router-handler:
     extends:
-      file: ../deno-base-docker-compose.yaml
+      file: ./docker-compose-base.yaml
       service: deno-service
     command: deno run -A --unstable-ffi ./router-handler/main.ts
     environment:
