--- a/apps/ridi-router/docker-compose-base.yaml
+++ b/apps/ridi-router/docker-compose-base.yaml
@@ -7,7 +7,7 @@ services:
       context: .
       dockerfile: ./Dockerfile
     volumes:
-      - ${RIDI_DATA_DIR}:/ridi-data
+      - ${RIDI_DATA_DIR}:/ridi-data:rw
     environment:
       - RIDI_DATA_DIR:${RIDI_DATA_DIR}
     healthcheck:
