--- a/apps/ridi-router/docker-compose-base.yaml
+++ b/apps/ridi-router/docker-compose-base.yaml
@@ -7,8 +7,7 @@ services:
       context: .
       dockerfile: ./Dockerfile
     volumes:
-      - ${RIDI_DATA_DIR}:/ridi-data:rw
-    user: ridi:deno
+      - ${RIDI_DATA_DIR}:/ridi-data
     environment:
       - RIDI_DATA_DIR:${RIDI_DATA_DIR}
     healthcheck:
