--- a/apps/ridi-router/docker-compose-map-data-handler.yaml
+++ b/apps/ridi-router/docker-compose-map-data-handler.yaml
@@ -5,3 +5,5 @@ services:
       file: ./docker-compose-base.yaml
       service: deno-service
     command: deno run -A --unstable-ffi ./map-data-handler/main.ts
+    environment:
+      - SUPABASE_URL=${SUPABASE_URL}
