--- a/apps/ridi-router/lib/deno.json
+++ b/apps/ridi-router/lib/deno.json
@@ -6,6 +6,7 @@
 		"sqlite": "jsr:@db/sqlite@0.12",
 		"valibot": "jsr:@valibot/valibot@0.42.1",
 		"logger": "jsr:@logtape/logtape@0.8.0",
-		"yaml": "jsr:@std/yaml@1.0.5"
+		"yaml": "jsr:@std/yaml@1.0.5",
+		"postgres": "npm:postgres"
 	}
 }
