--- a/apps/ridi-router/Dockerfile
+++ b/apps/ridi-router/Dockerfile
@@ -8,6 +8,7 @@ RUN apt-get update && apt-get install -y curl coreutils && rm -rf /var/lib/apt/l
 # Build arguments for ridi-router
 ARG RIDI_ROUTER_VERSION
 ENV RIDI_ROUTER_VERSION=${RIDI_ROUTER_VERSION}
+ENV RIDI_ENV=prod
 
 COPY . .
 ENV REGION_LIST=./region-list-prod.json
