--- a/apps/ridi-router/Dockerfile
+++ b/apps/ridi-router/Dockerfile
@@ -5,6 +5,11 @@ WORKDIR /app
 # Install required packages and clean up
 RUN apt-get update && apt-get install -y curl coreutils && rm -rf /var/lib/apt/lists/*
 
+ARG OPEN_OBSERVE_ORG
+ARG OPEN_OBSERVE_TOKEN
+
+RUN curl -O https://raw.githubusercontent.com/openobserve/agents/main/linux/install.sh && chmod +x install.sh && sudo ./install.sh https://api.openobserve.ai/api/${OPEN_OBSERVE_ORG} ${OPEN_OBSERVE_TOKEN}
+
 # Build arguments for ridi-router
 ARG RIDI_ROUTER_VERSION
 ENV RIDI_ROUTER_VERSION=${RIDI_ROUTER_VERSION}
