--- a/apps/ridi-router/docker-compose-map-data-handler.yaml
+++ b/apps/ridi-router/docker-compose-map-data-handler.yaml
@@ -6,4 +6,5 @@ services:
       service: deno-service
     command: deno run -A --unstable-ffi ./map-data-handler/main.ts
     environment:
-      - SUPABASE_DB_URL=${SUPABASE_DB_URL}
+      - SUPABASE_DB_URL: ${SUPABASE_DB_URL}
+      - RIDI_ENV_NAME: map-data-handler
