fix: otel install

--- a/apps/ridi-router/docker-compose-deploy-handler.yaml
+++ b/apps/ridi-router/docker-compose-deploy-handler.yaml
@@ -6,8 +6,8 @@ services:
       service: deno-service
     command: deno run -A --unstable-ffi ./deploy-handler/main.ts
     environment:
-      - COOLIFY_API_URL: ${COOLIFY_API_URL}
-      - COOLIFY_TOKEN: ${COOLIFY_TOKEN}
-      - COOLIFY_DEPLOYMENT_ID_ROUTER_HANDLER: ${COOLIFY_DEPLOYMENT_ID_ROUTER_HANDLER}
-      - COOLIFY_DEPLOYMENT_ID_MAP_DATA_HANDLER: ${COOLIFY_DEPLOYMENT_ID_MAP_DATA_HANDLER}
-      - RIDI_ENV_NAME: deploy-handler
+      - COOLIFY_API_URL=${COOLIFY_API_URL}
+      - COOLIFY_TOKEN=${COOLIFY_TOKEN}
+      - COOLIFY_DEPLOYMENT_ID_ROUTER_HANDLER=${COOLIFY_DEPLOYMENT_ID_ROUTER_HANDLER}
+      - COOLIFY_DEPLOYMENT_ID_MAP_DATA_HANDLER=${COOLIFY_DEPLOYMENT_ID_MAP_DATA_HANDLER}
+      - RIDI_ENV_NAME=deploy-handler
