--- a/apps/ridi-router/Dockerfile
+++ b/apps/ridi-router/Dockerfile
@@ -30,4 +30,4 @@ ENV RIDI_ROUTER_BIN=./ridi-router
 RUN curl -L "https://github.com/tomsjansons/ridi-router/releases/download/${RIDI_ROUTER_VERSION}/ridi-router" -o ridi-router \
     && chmod +x ridi-router
 
-CMD ["/bin/sh", "./startup.sh"]
+CMD ./startup.sh
