--- a/apps/ridi-router/docker-compose-deploy-handler.yaml
+++ b/apps/ridi-router/docker-compose-deploy-handler.yaml
@@ -4,7 +4,7 @@ services:
     extends:
       file: ./docker-compose-base.yaml
       service: deno-service
-    command: deno run -A --unstable-ffi ./deploy-handler/main.ts
+    command: ./startup.sh ./deploy-handler/main.ts
     environment:
       - COOLIFY_API_URL=${COOLIFY_API_URL}
       - COOLIFY_TOKEN=${COOLIFY_TOKEN}
