fix: export logs

--- a/apps/ridi-router/otel-config.yaml
+++ b/apps/ridi-router/otel-config.yaml
@@ -49,6 +49,6 @@ service:
       processors: [resourcedetection/system, memory_limiter, batch]
       exporters: [otlphttp/openobserve]
     logs:
-      receivers: [filelog/std]
+      receivers: [filelog/std, otlp]
       processors: [resourcedetection/system, memory_limiter, batch]
       exporters: [otlphttp/openobserve]
