fix: log format#

--- a/apps/ridi-router/deno.json
+++ b/apps/ridi-router/deno.json
@@ -1,4 +1,7 @@
 {
+	"tasks": {
+		"install": "cd ./deploy-handler && deno install --lock deno.lock --frozen=false --entrypoint main.ts && cd ../map-data-handler && deno install --lock deno.lock --frozen=false --entrypoint main.ts && cd ../router-handler && deno install --lock deno.lock --frozen=false --entrypoint main.ts"
+	},
 	"workspace": [
 		"./deploy-handler",
 		"./map-data-handler",
