--- a/apps/ridi-router/lib/deno.json
+++ b/apps/ridi-router/lib/deno.json
@@ -6,8 +6,8 @@
 		"sqlite": "jsr:@db/sqlite@0.12",
 		"valibot": "jsr:@valibot/valibot@0.42.1",
 		"logger": "jsr:@logtape/logtape@0.8.0",
-		"otel": "jsr:@logtape/otel",
 		"yaml": "jsr:@std/yaml@1.0.5",
-		"postgres": "npm:postgres"
+		"postgres": "npm:postgres",
+		"flat": "npm:flat"
 	}
 }
