--- a/apps/ridi-router/docker-compose-router-handler.yaml
+++ b/apps/ridi-router/docker-compose-router-handler.yaml
@@ -1,6 +1,6 @@
 name: router-handler
 services:
-  router-handler:
+  router-handler/:
     extends:
       file: ./docker-compose-base.yaml
       service: deno-service
